--- a/flex/06-flex-layout/solution/solution.css
+++ b/flex/06-flex-layout/solution/solution.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
 body {
   height: 100vh;
   margin: 0;
@@ -66,5 +64,5 @@ ul {
   list-style: none;
   margin: 0;
   padding: 0;
-  gap: 16px
+  gap: 16px;
 }
