--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,21 +7,33 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  margin: 0px;
+  padding: 10px 8px;
+  font-size: 25px;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 8px 0px;
+  padding: 10px 8px;
+  font-size: large;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  padding: 10px 8px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: 0 auto;
+  padding: 8px 16px;
 }
